# ddr-public

./: .gitignore  COPYRIGHT  INSTALL  Makefile  README.rst  VERSION  pyproject.toml  requirements-dev.txt  requirements.txt
conf/: ddrpublic.cfg  ddrpublic.conf  nginx.conf  settings.py  supervisor.conf
ddrpublic/: Makefile  manage.py  pytest.ini  test.sh
ddrpublic/ddrpublic/: __init__.py  settings.py  urls.py  wsgi.py
ddrpublic/ddrpublic/templates/: 500.html
ddrpublic/elasticsearch/: __init__.py
ddrpublic/names/: README  api.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
ddrpublic/names/templates/names/: detail.html  index.html  list-object.html  names-paginate.html  search.html
ddrpublic/names/templatetags/: names_tags.py
ddrpublic/requirements/: _base.txt  dev.txt
ddrpublic/templates/: base-partner.html  base.html
ddrpublic/tests/: site.twill
ddrpublic/ui/: __init__.py  api.py  archivedotorg.py  context_processors.py  decorators.py  docstore.py  dvcs.py  encyc.py  faceting.py  forms.py  forms_search.py  identifier.py  misc.py  models.py  search.py  sitemaps.py  tests.py  urls.py
ddrpublic/ui/templates/namesdb_public/: person.html
ddrpublic/ui/templates/rest_framework/: api.html
ddrpublic/ui/templates/ui/: 400.html  403.html  404.html  500.html  faq.html  (+25 more)
ddrpublic/ui/templatetags/: ui_tags.py
ddrpublic/ui/views/: __init__.py  api.py  browse.py  collections.py  entities.py  files.py  narrators.py  objects.py  organizations.py  persons.py  repo.py  search.py  searching.py
debian/conf/: ddrpublic.cfg  ddrpublic.conf  elasticsearch.yml  gunicorn_ddrpublic.conf  settings.py
(+62 files in other folders)
